<resources>
    <string name="app_name">Medi Connect</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="enter_call_id">Enter call id</string>
    <string name="mic">mic</string>
    <string name="call_end">call end</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="doctor">Doctor</string>
    <string name="you_are_a">You are a</string>
    <string name="patient">Patient</string>
    <string name="video_call">video call</string>
    <string name="making_you_available">Making you available…</string>
    <string name="getting_active_doc_list_dot">Getting active doctors list…</string>
    <string name="restart_app">Restart app</string>
    <string name="failed_to_fetch_data">Failed to fetch your details</string>
    <string name="no_doctor_av">No doctor available</string>
    <string name="notify_message">You are now online. You can now join your appointment(if any).</string>
    <string name="exit">Exit</string>
    <string name="you_are_not_signed_in">You are not signed in</string>
    <string name="processing_request">Processing request…</string>
    <string name="ph_is_calling">%1$s is calling…</string>
    <string name="ph_only">%1$d</string>
    <string name="about_the_ph">About the %1$s</string>
    <string name="ph_string_only">%1$s</string>
    <string name="not_available">Not available</string>
    <string name="please_wait">Please wait</string>
    <string name="your_message">Your message</string>
    <string name="send_message">send message</string>
    <string name="pick_image">Pick image</string>
    <string name="log_out">Log out</string>
    <string name="later">Later</string>
    <string name="add_now">Add now</string>
    <string name="your_name">Your name</string>
    <string name="your_age">Your age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="your_height_is">Your height is:</string>
    <string name="feet">feet</string>
    <string name="inch">inch</string>
    <string name="save">Save</string>
    <string name="disease_description">Disease description</string>
    <string name="your_wight">Your weight(kg)</string>
    <string name="_0">0</string>
    <string name="profile">profile</string>
    <string name="close">close</string>
    <string name="welcome_user">Welcome user</string>
    <string name="google_icon">Google icon</string>
    <string name="select_your_profession">Select your profession</string>
    <string name="it_s_your_only">It\'s your only</string>
    <string name="got_it">Got it</string>
    <string name="extra_info">Extra info</string>
    <string name="successful">Successful</string>
    <string name="info_icon">Info icon</string>
    <string name="speciality_area">Speciality Area</string>
    <string name="years_of_practice">Years of practice</string>
    <string name="call">Call</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="chats">Chats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by_name_speciality">Search by name, speciality</string>
    <string name="search_icon_description">Search box</string>
    <string name="let_s_find_your_doctor">Let\'s find your doctor</string>
    <string name="icon_only">Icon only</string>
    <string name="running_appointment">Running appointment</string>
    <string name="see_all">See all</string>
    <string name="no_appointment_right_now">No appointment right now</string>
    <string name="no_doctor_found">No doctor found</string>
    <string name="go_back">Go back</string>
    <string name="find_your_doctor">Find your doctor</string>
    <string name="no_appointment">No appointment</string>
    <string name="my_appointments">My appointments</string>
    <string name="about_yourself">About yourself</string>
    <string name="all">All</string>
    <string name="about_the_doctor">About the doctor</string>
    <string name="about_the_patient">About the patient</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="book_now">Book Now</string>
    <string name="currently">Currently</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="upcoming_appointment">Upcoming appointment</string>
    <string name="no_chats_found">No chats found</string>
    <string name="chat">Chat</string>
    <string name="processing_your_request">Processing your request…</string>
    <string name="full_name">Full Name</string>
    <string name="your_height">Your height</string>
    <string name="dots">…</string>
</resources>
