<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/corner_round_only"
    android:backgroundTint="@color/background_color"
    android:layout_margin="12dp"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvPopUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:textSize="@dimen/text_size"
            android:text="@string/it_s_your_only"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/ivInfoIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/baseline_info_24"
            android:contentDescription="@string/info_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvPopUpMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/text_size_medium"
            android:gravity="center"
            android:padding="4dp"
            android:fontFamily="sans-serif"
            tools:text="Only you can see and modify your schedules. This is saved in database separately in case you logout / clear app data."
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPopUpTitle" />

        <TextView
            android:id="@+id/tvPopUpMoreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/little_round_button_background"
            android:backgroundTint="@color/dark_green_gray"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/extra_info"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPopUpMessage" />

        <LinearLayout
            android:id="@+id/llPopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPopUpMoreInfo" />

        <android.widget.Button
            android:id="@+id/buttonClosePopUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/pop_up_background"
            android:minHeight="32dp"
            android:text="@string/got_it"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llPopUp"
            app:layout_constraintWidth_percent=".7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
