<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientProfile"
    android:id="@+id/cl_profile_root">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".4">

            <RelativeLayout
                android:id="@+id/rlImageHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_image_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageViewProfile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/doctor_icon"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:strokeColor="@color/person_icon_stroke"
                    app:strokeWidth="2dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="@string/full_name"
                    android:textColor="@color/hint_tv_color"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/full_name"
                    android:importantForAutofill="no"
                    android:inputType="text|textNoSuggestions"
                    android:minHeight="40dp"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="@string/your_age"
                    android:textColor="@color/hint_tv_color"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/your_age"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="40dp"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="@string/your_wight"
                    android:textColor="@color/hint_tv_color"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/your_wight"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="40dp"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="@string/gender"
                    android:textColor="@color/hint_tv_color"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shadow_back_down"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_weight">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingStart="8dp"
                        android:paddingEnd="4dp"
                        android:text="@string/gender"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias=".96"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent">

                        <RadioButton
                            android:id="@+id/radio_button_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:onClick="onMaleClicked"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radio_button_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:onClick="onFemaleClicked"
                            android:text="@string/female" />

                    </RadioGroup>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:text="@string/your_height"
                    android:textColor="@color/hint_tv_color"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    tools:layout_editor_absoluteX="8dp">

                    <EditText
                        android:id="@+id/editTextHeightFt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shadow_back_down"
                        android:hint="@string/feet"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:minHeight="40dp"
                        android:padding="8dp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/editTextHeightIn"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent=".48" />

                    <EditText
                        android:id="@+id/editTextHeightIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shadow_back_down"
                        android:hint="@string/inch"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:minHeight="40dp"
                        android:padding="8dp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/editTextHeightFt"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent=".48" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:text="@string/disease_description"
                    android:textColor="@color/hint_tv_color"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/disease_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minHeight="40dp"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <android.widget.Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_ripple_red"
                android:minHeight="40dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
