<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:id="@+id/rl_sign_in">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pb_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/tv_sign_in_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pb_sign_in"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:fontFamily="serif-monospace"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="Message"/>

    <TextView
        android:id="@+id/tv_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/very_dim_white"
        android:layout_above="@id/cl_tmp"
        android:padding="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/you_are_a"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_tmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/rl_d"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toEndOf="@+id/rl_p"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".4">

            <ImageView
                android:id="@+id/iv_doctor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/tv_d"
                android:contentDescription="@string/doctor"
                android:src="@drawable/doctor_icon" />

            <TextView
                android:id="@+id/tv_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/doctor"
                android:textColor="@color/text_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_p"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/rl_d"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".4">

            <ImageView
                android:id="@+id/iv_patient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/tv_p"
                android:contentDescription="@string/doctor"
                android:padding="8dp"
                android:src="@drawable/patient_icon" />

            <TextView
                android:id="@+id/tv_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/patient"
                android:textColor="@color/text_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/soft_blue"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>
